--- a/Project.toml
+++ b/Project.toml
@@ -72,6 +72,9 @@ UUIDs = "1.11.0"
 ZMQ = "1"
 julia = "1.12"
 
+[sources]
+Tachikoma = {url = "https://github.com/kahliburke/Tachikoma.jl"}
+
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
