CI: drop pre from matrix, fix SHA compat entry

--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ Profile = "1.10"
 REPL = "1.10"
 Random = "1.10"
 ReTest = "0.3.4"
-SHA = "0.7"
+SHA = "0.7, 1"
 SQLite = "1.6.1"
 Serialization = "1.11.0"
 Sockets = "1.11.0"
