--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,15 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 ZMQ = "c2297ded-f4af-51ae-bb23-16f91089e4e1"
 
+[weakdeps]
+PDFIO = "4d0d745f-9d9a-592e-8d18-1ad8a0f42b92"
+
+[extensions]
+KaimonPDFIOExt = "PDFIO"
+
+[sources]
+Tachikoma = {url = "https://github.com/kahliburke/Tachikoma.jl"}
+
 [compat]
 Aqua = "0.8"
 CommonMark = "0.8.16"
@@ -52,6 +61,7 @@ Logging = "1.11.0"
 LoggingExtras = "1.2.0"
 Match = "2.4.1"
 OteraEngine = "1.1.3"
+PDFIO = "0.1.15"
 PNGFiles = "0.4.4"
 Pkg = "1.10"
 Preferences = "1"
@@ -71,9 +81,6 @@ Test = "1.10"
 UUIDs = "1.11.0"
 ZMQ = "1"
 julia = "1.12"
-
-[sources]
-Tachikoma = {url = "https://github.com/kahliburke/Tachikoma.jl"}
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
